--- a/MONOGRAFIA.html
+++ b/MONOGRAFIA.html
@@ -9,7 +9,7 @@
 <body>
 <header style="background-color:lightpink;" >
   <link rel="stylesheet" href="style.css">
-  <h1>MONOGRAFIA ACERCA DE LOS ARIS</h1>
+  <h1>MONOGRAFIA ACERCA DE LOS ARIS.</h1>
 <div style="display:inline-block;vertical-align:top;">
    <nav> 
 
@@ -29,17 +29,17 @@
 </div>
 <div style="background-color: BlanchedAlmond">
 <form action="">
-            <h3>contactanos</h3>
+            <h3>Contáctanos</h3>
             <label for="nombre">
-                <span>Nombre</span>
+                <span>Nombre.</span>
                 <p><input type="text" name="nombre" id="nombre" autocomplete="name" required></p>
             </label>
             <label for="correo">
-                <span>Correo</span>
+                <span>Correo.</span>
                 <p><input type="email" name="correo" id="correo" autocomplete="email" required></p>
             </label>
             <label for="mensaje">
-                <span>Mensaje</span>
+                <span>Mensaje.</span>
                 <p><textarea name="mensaje"></textarea> </p>
             </label>
             <input type="submit"> 
